--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard | Fitness Tracker</title>
+    <title>Workouts | Fitness Tracker</title>
     <link
       rel="shortcut icon"
       href="{{ url_for('static', path='favicon.ico') }}"
@@ -23,83 +23,311 @@
       })();
     </script>
 
-    <nav
-      class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600"
-    >
-      <div
-        class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+    <main class="flex flex-col w-full h-screen">
+      <nav
+        class="bg-white dark:bg-gray-900 w-full h-[15%] mb-5 z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600"
       >
-        <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img
-            src="https://em-content.zobj.net/source/apple/76/flexed-biceps_1f4aa.png"
-            class="h-8"
-            alt="Logo"
-          />
-          <span
-            class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-            >Fitness Tracker</span
+        <div
+          class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+        >
+          <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+            <img
+              src="https://em-content.zobj.net/source/apple/76/flexed-biceps_1f4aa.png"
+              class="h-8"
+              alt="Logo"
+            />
+            <span
+              class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+              >Fitness Tracker</span
+            >
+          </a>
+          <div
+            class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse"
           >
-        </a>
-        <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-          <button
-            type="button"
-            class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800"
+            <button
+              type="button"
+              id="logout"
+              class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800"
+            >
+              Logout
+            </button>
+
+            <button
+              data-collapse-toggle="navbar-sticky"
+              type="button"
+              class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+              aria-controls="navbar-sticky"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Open main menu</span>
+              <svg
+                class="w-5 h-5"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 17 14"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 1h15M1 7h15M1 13h15"
+                />
+              </svg>
+            </button>
+          </div>
+          <div
+            class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
+            id="navbar-sticky"
           >
-            Logout
-          </button>
-          <button
-            data-collapse-toggle="navbar-sticky"
-            type="button"
-            class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-            aria-controls="navbar-sticky"
-            aria-expanded="false"
+            <ul
+              class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+            >
+              <li>
+                <a
+                  href="/dashboard"
+                  class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
+                  >Dashboard</a
+                >
+              </li>
+              <li>
+                <a
+                  href="/profile"
+                  class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+                  aria-current="page"
+                  >Profile</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <div class="flex w-full">
+        <button
+          data-drawer-toggle="default-sidebar"
+          aria-controls="default-sidebar"
+          aria-controls="default-sidebar"
+          type="button"
+          class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+        >
+          <span class="sr-only">Open sidebar</span>
+          <svg
+            class="w-6 h-6"
+            aria-hidden="true"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
           >
-            <span class="sr-only">Open main menu</span>
+            <path
+              clip-rule="evenodd"
+              fill-rule="evenodd"
+              d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"
+            ></path>
+          </svg>
+        </button>
+
+        <aside
+          id="default-sidebar"
+          class="h-[80%] w-[20%] left-0 z-40 sm:block sm:w-64 bg-white dark:bg-gray-800 block inset-y-0 -translate-x-full transition duration-200 ease-in-out"
+          aria-label="Sidebar"
+        >
+          <div
+            class="flex flex-col items-center px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800"
+          >
+            <ul class="space-y-2 font-medium">
+              <li>
+                <a
+                  href="/workouts/jumping-jacks-slug"
+                  class="flex w-full p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+                >
+                  <h4
+                    class="mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white"
+                  >
+                    Jumping Jacks
+                  </h4>
+                  <p class="font-normal text-gray-700 dark:text-gray-400"></p>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href="/workouts/high-knees-slug"
+                  class="flex w-full p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+                >
+                  <h4
+                    class="mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white"
+                  >
+                    High Knees
+                  </h4>
+                  <p class="font-normal text-gray-700 dark:text-gray-400"></p>
+                </a>
+              </li>
+            </ul>
+            <a
+              href="/workouts/new"
+              class="flex flex-col items-center w-10 mt-5 rounded-full p-3 bg-blue-600 text-white text-center hover:bg-blue-700 dark:bg-blue-700 dark:hover:bg-blue-800"
+            >
+              <svg
+                class="w-3.5 h-3.5"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 18 18"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9 1v16M1 9h16"
+                />
+              </svg>
+            </a>
+          </div>
+        </aside>
+
+        <div class="flex-1 flex flex-col overflow-hidden">
+          <!-- Rest of the content -->
+        </div>
+      </div>
+
+      <section id="toasts">
+        <div
+          id="toast-success"
+          class="fixed top-5 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800"
+          role="alert"
+          style="display: none"
+        >
+          <div
+            class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-800 dark:text-green-200"
+          >
             <svg
               class="w-5 h-5"
               aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor"
+              viewBox="0 0 20 20"
+            >
+              <path
+                d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"
+              />
+            </svg>
+            <span class="sr-only">Значок проверки</span>
+          </div>
+          <div class="ms-3 text-sm font-normal" id="toast-success-text"></div>
+          <button
+            type="button"
+            class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+            data-dismiss-target="#toast-success"
+            aria-label="Close"
+            onclick="closeToast('toast-success')"
+          >
+            <span class="sr-only">Закрывать</span>
+            <svg
+              class="w-3 h-3"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
               fill="none"
-              viewBox="0 0 17 14"
+              viewBox="0 0 14 14"
             >
               <path
                 stroke="currentColor"
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 stroke-width="2"
-                d="M1 1h15M1 7h15M1 13h15"
+                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
               />
             </svg>
           </button>
         </div>
         <div
-          class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
-          id="navbar-sticky"
+          id="toast-danger"
+          class="fixed top-5 right-5 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800"
+          role="alert"
+          style="display: none"
         >
-          <ul
-            class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+          <div
+            class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200"
           >
-            <li>
-              <a
-                href="#"
-                class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
-                aria-current="page"
-                >Dashboard</a
-              >
-            </li>
-            <li>
-              <a
-                href="/profile"
-                class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >Profile</a
-              >
-            </li>
-          </ul>
+            <svg
+              class="w-5 h-5"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor"
+              viewBox="0 0 20 20"
+            >
+              <path
+                d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 11.793a1 1 0 1 1-1.414 1.414L10 11.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L8.586 10 6.293 7.707a1 1 0 0 1 1.414-1.414L10 8.586l2.293-2.293a1 1 0 0 1 1.414 1.414L11.414 10l2.293 2.293Z"
+              />
+            </svg>
+            <span class="sr-only">Значок ошибки</span>
+          </div>
+          <div class="ms-3 text-sm font-normal" id="toast-danger-text"></div>
+          <button
+            type="button"
+            class="ms-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+            data-dismiss-target="#toast-danger"
+            aria-label="Close"
+            onclick="closeToast('toast-danger')"
+          >
+            <span class="sr-only">Закрывать</span>
+            <svg
+              class="w-3 h-3"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 14 14"
+            >
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+              />
+            </svg>
+          </button>
         </div>
-      </div>
-    </nav>
+      </section>
+    </main>
 
     <script>
+      (async () => {
+        let accessToken = localStorage.getItem("access_token");
+        let { res, data } = await getAllExercises(accessToken);
+        if (res.status === 401) {
+          window.location.href = "/login";
+        }
+        // fill the data in the pages
+
+        // document.getElementById("email").value = data.email;
+        // document.getElementById("username").value = data.username ?? "";
+
+        // let genderTag = document.getElementById("gender");
+        // let genders = [...genderTag.options].map((o) => o.text);
+        // let gender = data.gender ?? "";
+        // if (gender !== "" && genders.includes(data.gender.toLowerCase())) {
+        //   genderTag.value = gender;
+        // }
+
+        // document.getElementById("height").value = data.height ?? 0;
+        // document.getElementById("weight").value = data.weight ?? 0;
+
+        // let activityLevelTag = document.getElementById("activity-level");
+        // let activityLevels = [...activityLevelTag.options].map((o) =>
+        //   parseInt(o.value)
+        // );
+        // let activityLevel = data.activity_level ?? 0;
+        // if (
+        //   activityLevel != 0 &&
+        //   activityLevels.includes(data.activity_level)
+        // ) {
+        //   activityLevelTag.value = activityLevel;
+        // }
+      })();
+
       const menuButton = document.querySelector(
         '[data-collapse-toggle="navbar-sticky"]'
       );
@@ -110,6 +338,29 @@
         const isExpanded = menuButton.getAttribute("aria-expanded") === "true";
         menuButton.setAttribute("aria-expanded", !isExpanded);
       });
+
+      document.getElementById("logout").addEventListener("click", () => {
+        localStorage.removeItem("access_token");
+        localStorage.removeItem("refresh_token");
+        window.location.href = "/login";
+      });
+
+      const sideBarToggle = document.querySelector(
+        '[data-drawer-toggle="default-sidebar"]'
+      );
+      const sideBar = document.getElementById("default-sidebar");
+
+      sideBarToggle.addEventListener("click", () => {
+        sideBar.classList.toggle("-translate-x-full");
+        sideBar.classList.toggle("hidden");
+        const isExpanded =
+          sideBarToggle.getAttribute("aria-expanded") === "true";
+        sideBarToggle.setAttribute("aria-expanded", !isExpanded);
+      });
+
+      function closeToast(id) {
+        document.getElementById(id).style.display = "none";
+      }
     </script>
   </body>
 </html>
