--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -215,6 +215,22 @@
                 <option value="3">Очень активный (3-5) раз в неделю</option>
               </select>
             </div>
+            <div>
+              <label
+                for="phone-number"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Phone</label
+              >
+              <input
+                type="number"
+                id="phone-number"
+                name="phone_number"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                placeholder=""
+                required
+              />
+            </div>
+            <!-- TODO: add profile pic -->
           </div>
           <button
             type="submit"
@@ -345,6 +361,7 @@
 
         document.getElementById("height").value = data.height ?? 0;
         document.getElementById("weight").value = data.weight ?? 0;
+        document.getElementById("phone-number").value = data.phone_number ?? "";
 
         let activityLevelTag = document.getElementById("activity-level");
         let activityLevels = [...activityLevelTag.options].map((o) =>
