--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -9,10 +9,7 @@
       href="../static/favicon.ico"
       type="image/x-icon"
     />
-    <link
-      href="../static/css/main.css"
-      rel="stylesheet"
-    />
+    <link href="../static/css/main.css" rel="stylesheet" />
     <script src="../static/js/lib.js"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css"
@@ -26,7 +23,7 @@
         await authFlow(null, "/login");
 
         let accessToken = localStorage.getItem("access_token");
-        let {res, data} = await getUser(accessToken);
+        let { res, data } = await getUser(accessToken);
         if (res.status === 401) {
           window.location.href = "/login";
         }
@@ -34,7 +31,6 @@
         if (data.username === "") {
           window.location.href = "/profile";
         }
-
       })();
     </script>
 
@@ -61,7 +57,7 @@
             id="logout"
             class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800"
           >
-              выход из системы
+            выход из системы
           </button>
           <button
             data-collapse-toggle="navbar-sticky"
@@ -110,6 +106,8 @@
                 class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
                 >Профиль</a
               >
+            </li>
+
             <li>
               <a
                 href="/workouts/new"
@@ -150,38 +148,13 @@
 
         <aside
           id="logo-sidebar"
-          class="fixed top-0 left-0 z-40 flex items-center justify-start w-[20%] h-screen pt-20 transition-transform -translate-x-full bg-white border-r border-gray-200 sm:translate-x-0 dark:bg-gray-800 dark:border-gray-700"
+          class="fixed top-0 left-0 z-40 flex items-center justify-start md:w-[30%] lg:w-[20%] w-[60%]  h-screen mt-20 transition-transform -translate-x-full bg-white border-r border-gray-200 sm:translate-x-0 dark:bg-gray-800 dark:border-gray-700"
           aria-label="Sidebar"
         >
           <div
             class="flex flex-col h-full px-3 pb-4 overflow-y-auto bg-white dark:bg-gray-800"
           >
-            <ul class="space-y-2 font-medium">
-              <li>
-                <button
-                  class="flex w-full p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
-                >
-                  <h4
-                    class="mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white"
-                  >
-                    Прыгающие домкраты
-                  </h4>
-                  <p class="font-normal text-gray-700 dark:text-gray-400"></p>
-                </button>
-              </li>
-
-              <li>
-                <button
-                  class="flex w-full p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
-                >
-                  <h4
-                    class="mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white"
-                  >
-                    Высокие колени
-                  </h4>
-                  <p class="font-normal text-gray-700 dark:text-gray-400"></p>
-                </button>
-              </li>
+            <ul class="space-y-2 font-medium" id="workouts">
             </ul>
             <div class="w-full flex flex-col items-center content-center">
               <a
@@ -214,23 +187,108 @@
           <div
             class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700"
           >
-            <div>Упражнение: <span id="current">Прыгающие домкраты</span></div>
-            <div>Таймер: <span id="timer">0:00</span></div>
-            <div>Повторения: <span id="repetition-count">0</span></div>
-            <video id="video" class="w-[65%] h-full" playsinline autoplay></video>
+            <section class="bg-white dark:bg-gray-900">
+              <div
+                class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
+              >
+                <div class="mr-auto place-self-center lg:col-span-7">
+                  <h1 id="workout-name"
+                    class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white"
+                  >
+                  </h1>
+                  <p id="workout-description"
+                    class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400"
+                  >
+                  </p>
+                  <div id="workout-start-container"></div>
+                </div>
+                <div class="lg:mt-0 lg:col-span-5 lg:flex" id="workout-video">
+                </div>
+              </div>
+            </section>
           </div>
         </div>
       </div>
     </main>
 
     <script>
+      let workouts;
+
       (async () => {
         let accessToken = localStorage.getItem("access_token");
-        let { res, data } = await getAllExercises(accessToken);
-        if (res.status === 401) {
+        // for future case
+        // let { res, exercises } = await getAllExercises(accessToken);
+        // if (res.status === 401) {
+        //   window.location.href = "/login";
+        // }
+
+        let { res, data } = await getUserWorkouts(accessToken);
+        if (status.status === 401) {
           window.location.href = "/login";
         }
+        workouts = data.workouts;
+
+        const workoutTag = document.getElementById("workouts");
+        data.workouts.forEach((workout) => {
+          const li = document.createElement("li");
+          li.innerHTML = `
+            <button
+              onclick="chooseWorkout(${workout.id})"
+              class="flex flex-col item-center content-center content-fit flex-flow w-full p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+            >
+              <h4
+                class="mb-2 text-xl font-bold tracking-tight text-gray-900 dark:text-white"
+              >
+                ${workout.name}
+              </h4>
+              <p class="text-xs text-gray-700 dark:text-gray-400">${String(
+                workout.description
+              ).substring(0, 40)}...</p>
+            </button>
+          `;
+          workoutTag.appendChild(li);
+        });
       })();
+
+      function chooseWorkout(id) {
+        let workout = workouts.find((workout) => workout.id === id);
+        document.getElementById("workout-name").innerText = workout.name;
+        document.getElementById("workout-description").innerText = workout.description;
+
+        document.getElementById("workout-start-container").innerHTML = `
+        <a
+          href="/workouts/start/${workout.id}"
+          class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900"
+        >
+          Start Exercise
+          <svg
+            class="w-5 h-5 ml-2 -mr-1"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </a>
+        `;
+
+        let video = document.getElementById("workout-video");
+        video.innerHTML = `
+        <video
+          src="../static/videos/${workout.exercise.video_link}"
+          alt="exercise video"
+          playsinline 
+          autoplay
+          controls
+          muted 
+          loop
+        /> </video>
+        `;
+      }
 
       document.getElementById("logout").addEventListener("click", () => {
         localStorage.removeItem("access_token");
@@ -241,85 +299,6 @@
       function closeToast(id) {
         document.getElementById(id).style.display = "none";
       }
-    </script>
-
-    <script>
-      const video = document.getElementById("video");
-      const repetitionsCountElement = document.getElementById("repetition-count");
-      const timerElement = document.getElementById("timer");
-      const ws = new WebSocket(
-        (window.location.protocol === "https:" ? "wss://" : "ws://") +
-          window.location.host +
-          "/ws"
-      );
-      let seconds = 0;
-      let minutes = 0;
-
-      function updateTimer() {
-        seconds++;
-        if (seconds === 60) {
-          seconds = 0;
-          minutes++;
-        }
-        timerElement.innerText = `${minutes}:${
-          seconds < 10 ? "0" : ""
-        }${seconds}`;
-      }
-
-      if (navigator.mediaDevices.getUserMedia) {
-        navigator.mediaDevices
-          .getUserMedia({ video: true })
-          .then(function (stream) {
-            video.srcObject = stream;
-          })
-          .catch(function (err) {
-            console.log("Что-то пошло не так!", err);
-          });
-      }
-
-      ws.onmessage = function (event) {
-        const arrayBuffer = event.data;
-        const blob = new Blob([arrayBuffer], { type: "image/jpeg" });
-        receivedImg.src = URL.createObjectURL(blob);
-        repetitionsCountElement.innerText = event.data;
-      };
-
-      video.addEventListener("play", () => {
-        const canvas = document.createElement("canvas");
-        const context = canvas.getContext("2d");
-        const fps = 10;
-        const interval = 1000 / fps;
-
-        const sendFrame = () => {
-          if (video.paused || video.ended) {
-            return;
-          }
-
-          const aspectRatio = video.videoWidth / video.videoHeight;
-          let targetHeight = 120;
-          let targetWidth = aspectRatio * targetHeight;
-
-          canvas.width = targetWidth;
-          canvas.height = targetHeight;
-
-          context.drawImage(video, 0, 0, targetWidth, targetHeight);
-          canvas.toBlob(
-            (blob) => {
-              blob.arrayBuffer().then((buffer) => {
-                const uint8View = new Uint8Array(buffer);
-                ws.send(uint8View);
-              });
-            },
-            "image/jpeg",
-            0.7
-          );
-
-          setTimeout(sendFrame, interval);
-        };
-        sendFrame();
-
-        setInterval(updateTimer, 1000);
-      });
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
